--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -2,3 +2,4 @@
 %h2= @project.name
 
 = link_to 'Edit Project', edit_project_path(@project)
+= link_to "Delete Project", @project, method: :delete, confirm: "Are you sure?"
