--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,5 +1,7 @@
 - title(@project.name, "Projects")
 %h2= @project.name
 
+= link_to "New Ticket", new_project_ticket_path(@project)
+
 = link_to 'Edit Project', edit_project_path(@project)
 = link_to "Delete Project", @project, method: :delete, confirm: "Are you sure?"
