--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,6 +1,12 @@
 - title(@project.name, "Projects")
 %h2= @project.name
 
+%ul#tickets
+  - @project.tickets.each do |ticket|
+    %li
+      = "##{ticket.id} - "
+      = link_to(ticket.title, [@project, ticket])
+    
 = link_to "New Ticket", new_project_ticket_path(@project)
 
 = link_to 'Edit Project', edit_project_path(@project)
