--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,4 +16,6 @@
       .flash{ id: key }
         = value
     %h1= link_to "Ticketee", root_path
+    %nav
+      = link_to "Sign up", new_user_registration_path
     =yield
