--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,5 +17,9 @@
         = value
     %h1= link_to "Ticketee", root_path
     %nav
-      = link_to "Sign up", new_user_registration_path
-    =yield
+      - if user_signed_in?
+        Signed in as 
+        = current_user.email
+      - else
+        = link_to "Sign up", new_user_registration_path
+    = yield
