--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,4 +22,5 @@
         = current_user.email
       - else
         = link_to "Sign up", new_user_registration_path
+        = link_to "Sign in", new_user_session_path
     = yield
