When creating tickets, attribute them to the creator.

--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -1,5 +1,10 @@
 #ticket
   %h2= @ticket.title
+  %br
+    %small 
+      Created by 
+      = @ticket.user.email
+      
   = simple_format(@ticket.description)
 
   = link_to "Edit Ticket", [:edit, @project, @ticket]
