--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -3,4 +3,5 @@
   - @projects.each do |project|
     %li= link_to project.name, project
 
-= link_to 'New Project', new_project_path
+= admins_only do
+  = link_to 'New Project', new_project_path
