--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -9,5 +9,6 @@
     
 = link_to "New Ticket", new_project_ticket_path(@project)
 
-= link_to 'Edit Project', edit_project_path(@project)
-= link_to "Delete Project", @project, method: :delete, confirm: "Are you sure?"
+= admins_only do
+  = link_to 'Edit Project', edit_project_path(@project)
+  = link_to "Delete Project", @project, method: :delete, confirm: "Are you sure?"
