--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -6,8 +6,9 @@
     %li
       = "##{ticket.id} - "
       = link_to(ticket.title, [@project, ticket])
-    
-= link_to "New Ticket", new_project_ticket_path(@project)
+
+= authorized?("create tickets".to_sym, @project) do
+  = link_to "New Ticket", new_project_ticket_path(@project)
 
 = admins_only do
   = link_to 'Edit Project', edit_project_path(@project)
