--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -7,5 +7,8 @@
       
   = simple_format(@ticket.description)
 
-  = link_to "Edit Ticket", [:edit, @project, @ticket]
-  = link_to "Delete Ticket", [@project, @ticket], method: :delete, confirm: "Are you sure you want to delete this ticket?"
+  = authorized?("edit tickets", @project) do
+    = link_to "Edit Ticket", [:edit, @project, @ticket]
+    
+  = authorized?("delete tickets", @project) do
+    = link_to "Delete Ticket", [@project, @ticket], method: :delete, confirm: "Are you sure you want to delete this ticket?"
