--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -1,9 +1,17 @@
 #ticket
   %h2= @ticket.title
   %br
-    %small 
-      Created by 
-      = @ticket.user.email
+  %small 
+    Created by 
+    = @ticket.user.email
+  - if @ticket.asset.exists?
+    %h3 Attached File
+    .asset
+      %p= link_to File.basename(@ticket.asset.path), @ticket.asset.url
+    %p
+      %small
+        = number_to_human_size(@ticket.asset.size)
+        (= @ticket.asset.content_type)
       
   = simple_format(@ticket.description)
 
