--- a/app/views/tickets/_form.html.haml
+++ b/app/views/tickets/_form.html.haml
@@ -6,7 +6,11 @@
   %p
     = f.label :description
     = f.text_area :description
+  - number = 0
+  = f.fields_for :assets do |asset|
+    %p
+      = asset.label :asset, "File ##{number += 1}"
+      = asset.file_field :asset
+
   %p
-    = f.label :asset, "File"
-    = f.file_field :asset
-  = f.submit
+    = f.submit
