--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -4,14 +4,14 @@
   %small 
     Created by 
     = @ticket.user.email
-  - if @ticket.asset.exists?
+  - if @ticket.assets.exists?
     %h3 Attached File
-    .asset
-      %p= link_to File.basename(@ticket.asset.path), @ticket.asset.url
-    %p
-      %small
-        = number_to_human_size(@ticket.asset.size)
-        (= @ticket.asset.content_type)
+    .assets
+      - @ticket.assets.each do |asset|
+        %p= link_to File.basename(asset.asset_file_name), asset.asset.url
+        %p
+          %small
+            = number_to_human_size(asset.asset.size)
       
   = simple_format(@ticket.description)
 
