--- a/app/views/tickets/_form.html.haml
+++ b/app/views/tickets/_form.html.haml
@@ -7,10 +7,10 @@
     = f.label :description
     = f.text_area :description
   - number = 0
-  = f.fields_for :assets do |asset|
-    %p
-      = asset.label :asset, "File ##{number += 1}"
-      = asset.file_field :asset
+  #files
+    = render partial: "files/form", locals: { number: number }
+
+  = link_to "Add another file", 'javascript:', id: "add_another_file"
 
   %p
     = f.submit
