--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -20,3 +20,13 @@
     
   = authorized?("delete tickets", @project) do
     = link_to "Delete Ticket", [@project, @ticket], method: :delete, confirm: "Are you sure you want to delete this ticket?"
+
+%h3 Comments
+#comments
+  - if @ticket.comments.exists?
+    %co#ch10_191_1
+      = render @ticket.comments.select &:persisted?
+  - else
+    There are no comments for the ticket.
+
+= render "comments/form"
