When updating a comment's status, it also updates the ticket's status

--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -4,6 +4,7 @@
   %small 
     Created by 
     = @ticket.user.email
+    = render @ticket.state if @ticket.state
   - if @ticket.assets.exists?
     %h3 Attached File
     .assets
