--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -4,5 +4,8 @@
   %p
     = f.label :text
     = f.text_area :text
+  %p
+    = f.label :state_id
+    = f.select :state_id, @states.map { |s| [s.name, s.id] }, selected: @ticket.state_id
 
   = f.submit
