Users can tag tickets upon creation

--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -16,6 +16,8 @@
       
   = simple_format(@ticket.description)
 
+  #tags= render @ticket.tags
+
   = authorized?("edit tickets", @project) do
     = link_to "Edit Ticket", [:edit, @project, @ticket]
     
