--- a/app/views/tickets/_form.html.haml
+++ b/app/views/tickets/_form.html.haml
@@ -6,6 +6,9 @@
   %p
     = f.label :description
     = f.text_area :description
+  %p
+    = label_tag :tags
+    = text_field_tag :tags, params[:tags]
   - number = 0
   #files
     = render partial: "files/form", locals: { number: number }
