--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -8,5 +8,6 @@
     %p
       = f.label :state_id
       = f.select :state_id, @states.map { |s| [s.name, s.id] }, selected: @ticket.state_id
+    = render "tags/form"
 
   = f.submit
