--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,8 +1,13 @@
 - title(@project.name, "Projects")
 %h2= @project.name
 
+= form_tag search_project_tickets_path(@project), method: :get do
+  = label_tag "search"
+  = text_field_tag "search", params[:search]
+  = submit_tag "Search"
+
 %ul#tickets
-  - @project.tickets.each do |ticket|
+  - @tickets.each do |ticket|
     %li
       = render ticket.state if ticket.state
       = "##{ticket.id} - "
