--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -24,6 +24,14 @@
   = authorized?("delete tickets", @project) do
     = link_to "Delete Ticket", [@project, @ticket], method: :delete, confirm: "Are you sure you want to delete this ticket?"
 
+#watchers
+  = toggle_watching_button
+  %h4 Watchers
+  %ul
+    - @ticket.watchers.each do |watcher|
+      %li= watcher
+
+
 %h3 Comments
 #comments
   - if @ticket.comments.exists?
